--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,17 +4,24 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:id="@+id/nav_budgets"
+            android:icon="@drawable/ic_menu_budgets"
+            android:title="@string/menu_budgets" />
+
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_newbudget"
+            android:icon="@drawable/ic_menu_newbudget"
+            android:title="@string/menu_newbudget" />
     </group>
+    <item android:title="Configurações">
+        <menu>
+            <item
+                android:id="@+id/nav_configurations"
+                android:icon="@drawable/ic_menu_configuration"
+                android:title="@string/menu_configuration" />
+
+        </menu>
+    </item>
 </menu>
