--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,20 +6,21 @@
     app:startDestination="@+id/nav_home">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.yurifagundes.orcamento.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_budgets"
+        android:name="com.yurifagundes.orcamento.ui.budgets.BudgetsFragment"
+        android:label="@string/menu_budgets"
+        tools:layout="@layout/fragment_budgets" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.yurifagundes.orcamento.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_newbudget"
+        android:name="com.yurifagundes.orcamento.ui.newbudget.NewBudgetFragment"
+        android:label="@string/menu_newbudget"
+        tools:layout="@layout/fragment_new_budget" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.yurifagundes.orcamento.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_configurations"
+        android:name="com.yurifagundes.orcamento.ui.configuration.ConfigurationFragment"
+        android:label="@string/menu_configuration"
+        tools:layout="@layout/fragment_configuration" />
+
 </navigation>
