--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#0F428F</color>
+    <color name="colorPrimaryDark">#041733</color>
+    <color name="colorAccent">#4F89E1</color>
 </resources>
